    GL_ARB_multitexture

  * Fixed sf.net #21 "delete functions removed from Mesa 10.6"

  * Fixed sf.net #22 "Perl::OpenGL make test fails (undefined
    symbol: glWindowPos4iMESA)".  NOTE: This is a duplicate
    report of the problem in bug #21 but it motivated this
    release.  Thanks for the report, Richard.

  * Fixed sf.net #20 "Prefer system GL/#gl.h on non-Win32"



+------------------------------------------------------------------------+
|                  OpenGL-0.6704
+------------------------------------------------------------------------+

General Notes:

  * Fixes a number of bugs since the last release.  Thanks to
    Christian Walde, Olaf Dabrunz, and Alessandro Ranellucci for
    their contributions.

Highlights:

  * Fix item_count error in OpenGL::Array implementation

  * Fix POGL bug #12 re thread safety

  * Fix POGL bug #16 "Free to wrong pool" caused by calloc()



+------------------------------------------------------------------------+
|                  OpenGL-0.6703
+------------------------------------------------------------------------+

General Notes:

 * Minor update to tolerate absence of several extensions removed
   in Mesa 9.2.0.  Thanks to Colin Watson for reporting and fixing
   the problem.


Highlights:

  * Tolerate absence of several extensions removed in Mesa 9.2.0



+------------------------------------------------------------------------+
|                  OpenGL-0.6702
+------------------------------------------------------------------------+

General Notes:

 * This release fixes some minor build issures for Strawberry Perl 32bit
   where the wrong FreeGLUT library would be linked in---this failed at
   runtime during the 'perl Makefile.PL' step.

Highlights:

  * Clean up INSTALL, README, and bring more up-to-date.

  * Put util/strawberry.bat under git configuration management.

  * glutCloseFunc() feature has been disabled.  A warning is given
    the first time the close handler is called.
